--- a/layout_parts/q3/index.html
+++ b/layout_parts/q3/index.html
@@ -20,7 +20,56 @@
         <!-- 回答はクラスq3の要素の中に書いてね -->
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <div class="q3">
-          
+          <table class="layout">
+            <tr class="table_body">
+              <th class="subheading">日付</th>
+              <th class="subheading">朝ごはん</th>
+              <th class="subheading">昼ごはん</th>
+              <th class="subheading">おやつ</th>
+              <th class="subheading">夜ご飯</th>
+              <th class="subheading">夜食</th>
+            </tr>
+            <tr class="table_body">
+              <th class="subheading">2016/04/01</th>
+              <td class="table_content">食パン</td>
+              <td class="table_content">チャーハン</td>
+              <td class="table_content">杏仁豆腐</td>
+              <td class="table_content">舞茸丼</td>
+              <td class="table_content">いちご</td>
+            </tr>
+            <tr class="table_body">
+              <th class="subheading">2016/04/02</th>
+              <td class="table_content">なし</td>
+              <td class="table_content">ケバブ丼</td>
+              <td class="table_content">ゼリー</td>
+              <td class="table_content">唐揚げ定食</td>
+              <td class="table_content">いちご</td>
+            </tr>
+            <tr class="table_body">
+              <th class="subheading">2016/04/03</th>
+              <td class="table_content">納豆ご飯</td>
+              <td class="table_content">まぐろ定食</td>
+              <td class="table_content">チョコパン</td>
+              <td class="table_content">餃子定食</td>
+              <td class="table_content">チョコ</td>
+            </tr>
+            <tr class="table_body">
+              <th class="subheading">2016/04/04</th>
+              <td class="table_content">食パン</td>
+              <td class="table_content">牛丼</td>
+              <td class="table_content">アイス</td>
+              <td class="table_content">豚丼</td>
+              <td class="table_content">スムージー</td>
+            </tr>
+            <tr class="table_body">
+              <th class="subheading">合計カロリー</th>
+              <td class="table_content">10000kcal</td>
+              <td class="table_content">12000kcal</td>
+              <td class="table_content">3000kcal</td>
+              <td class="table_content">30000kcal</td>
+              <td class="table_content">1000kcal</td>
+            </tr>
+          </table>
         </div>
         <!-- 回答はクラスq3の要素の中に書いてね -->
       </div>
