--- a/layout_parts/q4/index.html
+++ b/layout_parts/q4/index.html
@@ -20,16 +20,16 @@
         <!-- 回答はクラスq4の要素の中に書いてね -->
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
-        <div class="q4">
-          <div>
-            <div>固定</div>
-            <div>可変</div>
-            <div>固定</div>
+        <div class="q4 container">
+          <div class="contents_box">
+            <div class="content small orange">固定</div>
+            <div class="content pink">可変</div>
+            <div class="content small blue">固定</div>
           </div>
-          <div>
-            <div>可変</div>
-            <div>可変</div>
-            <div>固定</div>
+          <div class="contents_box">
+            <div class="content yellow">可変</div>
+            <div class="content red">可変</div>
+            <div class="content large green">固定</div>
           </div>
         </div>
         <!-- 回答はクラスq4の要素の中に書いてね -->
