--- a/layout_parts/q6/index.html
+++ b/layout_parts/q6/index.html
@@ -25,8 +25,8 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <div>
-                <p>text-align</p>
+              <div class="q6_text-align">
+                <p class="q6_text-align_text">text-align</p>
               </div>
             </div>
             <!-- Q6-1の回答はここに書いてね -->
@@ -34,7 +34,7 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <p>margin</p>
+              <p class="q6_margin_text">margin</p>
             </div>
             <!-- Q6-1の回答はここに書いてね -->
           </div>
@@ -47,9 +47,9 @@
           <!-- Q6-2の回答はここに書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
-          <div class="q6 q6--around">
-            <div>
-              <p>table</p>
+          <div class="q6 q6--around table_box">
+            <div class="table_content">
+              <p class="table_text">table</p>
             </div>
           </div>
           <!-- Q6-2の回答はここに書いてね -->
@@ -57,8 +57,8 @@
           <!-- Q6-2の回答はここに書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
-          <div class="q6 q6--around">
-            <p>flex</p>
+          <div class="q6 q6--around flex_box">
+            <p class="flex_item">flex</p>
           </div>
           <!-- Q6-2の回答はここに書いてね -->
 
@@ -66,16 +66,16 @@
             <!-- Q6-2の回答はここに書いてね -->
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
-            <div class="q6__box is-stable">
-              <p class="q6__box__inner">position固定</p>
+            <div class="q6__box is-stable fixed_box">
+              <p class="q6__box__inner fixed_item">position固定</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
 
             <!-- Q6-2の回答はここに書いてね -->
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
-            <div class="q6__box is-flexible">
-              <p class="q6__box__inner">position可変</p>
+            <div class="q6__box is-flexible variable_box">
+              <p class="q6__box__inner variable_item">position可変</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
           </div>
