--- a/layout_parts/q6/index.html
+++ b/layout_parts/q6/index.html
@@ -66,7 +66,7 @@
             <!-- Q6-2の回答はここに書いてね -->
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
-            <div class="q6__box is-stable fixed_box">
+            <div class="q6__box is-stable position_box">
               <p class="q6__box__inner fixed_item">position固定</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
@@ -74,7 +74,7 @@
             <!-- Q6-2の回答はここに書いてね -->
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
-            <div class="q6__box is-flexible variable_box">
+            <div class="q6__box is-flexible position_box">
               <p class="q6__box__inner variable_item">position可変</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
